css overflow fix and some astetic changes

--- a/static/style.css
+++ b/static/style.css
@@ -3,8 +3,8 @@ body{
     background-color: black;
 }
 .posting{
-    right: 3em;
-    position: absolute;
+text-align: right;
+    margin-right: 2em;
 }
 .area{
     height: 5em;
@@ -14,11 +14,12 @@ body{
 }
 .but{
     position: absolute;
-    right: .1em;
+    right: 3.3em;
     margin-top: .6em;
 }
 .stuff{
     text-align: center;
+    width: 100%;
 }
 .comm{
     margin-right: 30%;
@@ -30,4 +31,13 @@ body{
 .hcomm{
     margin-left: 3em;
     margin-bottom: 2em;
+    right: 2em;
+}
+.headz{
+    text-align: center;
+    display: block;
+}
+body{
+    width: 99%;
+    overflow: auto;
 }
